# agentic-loop

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Agentic-loops_case-study_EN.docx  Petle-agentowe_studium-przypadku.docx
examples/: analyze_logs.py  console.py  fanout.py  pricing.py  run.py  run_demo.py  session_log.py  sweep.py
src/agentic_loop/: __init__.py  contracts.py  gemini.py  loop.py  ollama.py  streaming.py
src/problems/: __init__.py  maze.py  optimization.py  regex_golf.py  reverse_engineering.py  subset_sum.py
tests/: test_loop.py  test_pricing.py  test_problems.py  test_session_log.py
