[project]
name = "agenticai"
version = "0.1.0"
description = "Minimal agentic loop (maker + external verifier) on subset-sum"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_loop", "src/problems"]

[tool.pytest.ini_options]
pythonpath = ["src", "examples"]   # import the library + the observation layer in tests
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["docs"]   # docs/build.py is a standalone document builder, not project source

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]           # the library + problems are the typed core; examples are glue
